--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"vite": "^4.4.2"
+	},
+	"dependencies": {
+		"d3": "^7.8.5",
+		"d3-tip": "^0.9.1",
+		"puppeteer": "^21.7.0"
 	}
 }
